# shitty-forum-2023

./: Cargo.toml  LICENSE  README.md
assets/: index.html  layout.css  theme.css
assets/element/: create-thread.html  fav-thread.html  fav-topic.html  reply-form.html  thread.html
assets/page/: 404.html  create-thread.html  inspection.html  login.html  root.html  search.html  settings.html  signup.html  thread-404.html  thread.html  topic-404.html  topic.html  user-404.html  user.html
src/: auth.rs  main.rs
src/data/: mod.rs  moderation.rs  reply.rs  thread.rs  topic.rs  user.rs
src/db/: favorite.rs  inspection.rs  mod.rs  permissions.rs  search.rs  sequence.rs  store.rs
src/render/: format.rs  mod.rs
src/routes/: auth.rs  interact.rs  mod.rs  page.rs  resources.rs
store/auth/: aaaa.json  zzz.json
store/mod/: permissions.json
store/replies/: 1Nluk1ktOgTh5CxOmlluKBDh.json  1h8goDQu08utvTYRvQAR7IUs.json  2RPJBrv7Uvry4yIhoTQVOGnx.json  2nz4a8kCgU85FwaFR2sCkJFf.json  3hlUcCPmhom6sVIoiOHATKQdsuwdPJMKWumNMw1KWHmKSDOFbeLEZSvruF35hsTv.json  5Hq9XpCCa21SCMTonoBE53X5.json  5PNrDMg80YZf1R5n4sV0XP5X1hjPDPddkq2DHsKYPS22bfZtWHHDNVBpAMbKMUcb.json  7bJR7lQXVybRXO4RAq5as2lJ.json  96OBP06eBNkyRHyADVJTx7G9.json  9JyouzJzu3Hq6vPvUTBjssB5.json  AZspuI1XrIfw2I1R8CELcCqy.json  EiU9xNud0gNQLWkFx1xXY6GKBRzAPsxlGkV5AgLGCTXOU2VSuXNoya2hsYLZgouV.json  FWkS0KF5jSSaVUKTExWXyUvzeosW6UWIt21NeqA8xRaVKWOJzpcRGabztcofynN1.json  GK13AKSymJo4t6KVotjwgEl7.json  I72O1pW1jVDwERWKXaYtAZyQ.json  J4h4zpytjQ7z5kNN7vQYnsJn.json  KNcS08V8sMww2kuNfd21tAXw.json  SgZs7XQUt6qVbtmwg4Z7ecBs.json  (+24 more)
(+26 files in other folders)
